feat: checkpoint in-flight accounting and delivery updates